запросы завершены, пройдены тесты в постман, начинаю статистику